Archive2/1c/5b12f271614992/output
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/tuple: In instantiation of 'constexpr std::_Head_base<_Idx, _Head, false>::_Head_base(const _Head&) [with long unsigned int _Idx = 0ul; _Head = char [6]]':
/usr/local/include/c++/4.9.0/tuple:255:44:   required from 'constexpr std::_Tuple_impl<_Idx, _Head, _Tail ...>::_Tuple_impl(const _Head&, const _Tail& ...) [with long unsigned int _Idx = 0ul; _Head = char [6]; _Tail = {int}]'
/usr/local/include/c++/4.9.0/tuple:531:30:   required from 'constexpr std::tuple<_T1, _T2>::tuple(const _T1&, const _T2&) [with _T1 = char [6]; _T2 = int]'
main.cpp:5:36:   required from 'void f(const Args& ...) [with Args = {char [6], int}]'
main.cpp:9:18:   required from here
/usr/local/include/c++/4.9.0/tuple:134:25: error: array used as initializer
       : _M_head_impl(__h) { }
                         ^
